--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,82 @@
 body {
-	font-family: Arial;
+	font-family: 'Slabo 27px', serif;
+	background-image: url("wov.png");
+}
+
+
+#presentation {
+	background-color: rgba(0,0,0,0.5);
+	border-bottom: 3px solid rgba(0,100,100,1);
+}
+div {
+	display: block;
+}
+div h1, div h2 {
+	text-align: center;
+	font-family: 'Lobster', cursive;
+}
+h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-left: 1px solid;
+	border-right: 1px solid;
+	background-color: rgba(0,0,0,0.3);
+}
+#my-image {
+	margin:10px 40%;
+	margin-top: 15px;
+	width:20%;
+	border-radius: 50%;
+	box-shadow: 8px 8px #fff;
+}
+
+#main-content {
+	width: 940px;
+	margin: auto;
+	padding: auto;
+	background-color: rgba(255,255,255,0.8);
+}
+
+#block {
+	border: 1px solid;
+	background-color: rgba(200,200,200,0.2);
+	height: 900px;
+	padding: 5px;
+}
+
+#navbar {
+	float: right;
+	width:200px;
+	list-style-type: none;
+}
+nav li {
+	font-size: 20px;	
+	text-align: right;
+	border: 1px solid rgba(100,0,0,0.5);
+	margin-top: 5px;
+	background-color: rgba(200,200,200,0.4);
+	box-shadow: 3px 3px rgba(0,0,0,0.4);
+}
+nav li:hover {
+	cursor: pointer;
+	background-color: rgba(0,0,0,0);
+}
+
+#block div {
+	display:inline;
+}
+
+#content {
+	font-family: 'Arvo', serif;
+	float: left;
+	width:720px;
+}
+
+footer {
+	text-align: center;
+	padding: 20px;
+	background-color: rgba(0,0,0,0.5);
+	border: 1px solid;
 }
