--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@ body {
 	background-image: url("wov.png");
 }
 
-
+#current-page {
+	text-align: center;
+}
 #presentation {
 	background-color: rgba(0,0,0,0.5);
 	border-bottom: 3px solid rgba(0,100,100,1);
@@ -39,19 +41,26 @@ h1 {
 	background-color: rgba(255,255,255,0.8);
 }
 
+#main-content div, #main-content nav {
+	display: inline-block;
+}
+
 #block {
-	border: 1px solid;
 	background-color: rgba(200,200,200,0.2);
 	height: 900px;
 	padding: 5px;
 }
-
+li {
+	list-style-type:none;
+}
 #navbar {
-	float: right;
+	position: sticky;
+	bottom: 500px;
 	width:200px;
 	list-style-type: none;
 }
 nav li {
+	padding-right: 5px;
 	font-size: 20px;	
 	text-align: right;
 	border: 1px solid rgba(100,0,0,0.5);
@@ -71,7 +80,7 @@ nav li:hover {
 #content {
 	font-family: 'Arvo', serif;
 	float: left;
-	width:720px;
+	width:700px;
 }
 
 footer {
