--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,21 @@ body {
 	font-family: 'Slabo 27px', serif;
 	background-image: url("wov.png");
 }
-
+.overlay {
+	background-color: rgba(0,0,0,0.8);
+	position: fixed;
+	width:100%;
+	height:100%;
+}
+.popup {
+	background-color: rgba(200,200,200,0.9);
+	margin: 10% auto;
+	width:50%;
+	height:50%;
+}
+.popup p {
+	text-align: center;
+}
 #current-page {
 	text-align: center;
 }
