--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Slabo 27px', serif;
 	background-image: url("wov.png");
+	margin:0;
 }
 .overlay {
 	background-color: rgba(0,0,0,0.8);
@@ -16,9 +17,41 @@ body {
 }
 .popup p {
 	text-align: center;
+	margin: 10px auto;
+}
+.popup h2 {
+	text-align: center;
+	margin: 5% auto;
 }
 #current-page {
 	text-align: center;
+}
+#previous {
+	float:left;
+}
+#previous:hover {
+	cursor: pointer;
+}
+#next {
+	float:right;
+}
+#next:hover {
+	cursor: pointer;
+}
+#previous, #next {
+	font-size: 20px;
+	text-align: center;
+	background-color: rgba(250,250,250,1);
+	width:30px;
+	height:30px;
+	border-radius: 50%;
+}
+#my-image {
+	margin:10px 35%;
+	margin-top: 15px;
+	width:20%;
+	border-radius: 50%;
+	box-shadow: 8px 8px #fff;
 }
 #presentation {
 	background-color: rgba(0,0,0,0.5);
@@ -37,16 +70,6 @@ h1 {
 	margin-bottom: 0px;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	border-left: 1px solid;
-	border-right: 1px solid;
-	/*background-color: rgba(0,0,0,0.3);*/
-}
-#my-image {
-	margin:10px 40%;
-	margin-top: 15px;
-	width:20%;
-	border-radius: 50%;
-	box-shadow: 8px 8px #fff;
 }
 
 #main-content {
@@ -71,9 +94,6 @@ li {
 #navbar {
 	font-family: 'Slabo 27px', serif;
 	float:right;
-	/*position: sticky;*/
-	/*top:1px;
-	bottom: 640px;*/
 	height: 100%;
 	width:200px;
 	padding-left: 5px;
@@ -100,7 +120,6 @@ nav li:hover {
 }
 
 #content {
-	/*float:left;*/
 	font-family: 'Arvo', serif;
 	width:700px;
 }
